--- a/package.json
+++ b/package.json
@@ -10,24 +10,30 @@
   },
   "dependencies": {
     "@braks/vue-flow": "0.4.38",
+    "@nerd305/vuetify-date-range-picker": "^0.1.1",
     "@tiptap/starter-kit": "2.0.0-beta.192",
     "@tiptap/vue-3": "2.0.0-beta.97",
+    "@vuepic/vue-datepicker": "^8.2.0",
     "apexcharts": "3.36.3",
     "axios": "^1.6.7",
     "date-fns": "^2.29.3",
     "lodash": "^4.17.21",
     "maska": "^1.5.0",
+    "moment": "^2.30.1",
     "pinia": "^2.1.7",
     "vee-validate": "4.0",
     "vite-plugin-vuetify": "1.0.2",
     "vue": "^3.4.15",
     "vue-axios": "^3.5.2",
-    "vue-phone-number-input": "^1.12.13",
+    "vue-hotel-datepicker": "^4.6.0",
+    "vue-phone-number-input": "^1.1.7",
     "vue-router": "4.0.12",
+    "vue-sweetalert2": "^5.0.5",
     "vue-tabler-icons": "2.9.0",
+    "vue2-daterange-picker": "^0.6.8",
     "vue3-apexcharts": "1.4.1",
-    "vue3-perfect-scrollbar": "1.6.0",
-    "vuetify": "3.0.1",
+    "vue3-perfect-scrollbar": "^1.6.1",
+    "vuetify": "3.5.7",
     "yup": "^0.32.11"
   },
   "devDependencies": {
@@ -44,7 +50,7 @@
     "prettier": "^2.5.1",
     "sass": "^1.49.9",
     "sass-loader": "^10.0.0",
-    "typescript": "~4.5.5",
+    "typescript": "~4.7.4",
     "vite": "^2.9.1",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "1.0.3",
